[gd_scene load_steps=7 format=3 uid="uid://dlgrb470mtuwp"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_7gpuw"]
[ext_resource type="LabelSettings" uid="uid://ql3e6wdvyvoy" path="res://Settings/LabelTitleMain.tres" id="1_n03fa"]
[ext_resource type="LabelSettings" uid="uid://7vmh18irhg7p" path="res://Settings/LabelMEGA.tres" id="2_v2qlc"]
[ext_resource type="LabelSettings" uid="uid://0ul8ma62ej0l" path="res://Settings/LabelText.tres" id="2_vo058"]
[ext_resource type="Theme" uid="uid://cdp3kqu3vj86v" path="res://Settings/UpgradeMenuButtons.tres" id="4_fcxkb"]

[sub_resource type="Environment" id="Environment_4io26"]
background_mode = 3
background_canvas_max_layer = 128
glow_enabled = true
glow_levels/1 = 16.0
glow_levels/2 = 16.0
glow_levels/3 = 16.0
glow_levels/4 = 16.0
glow_hdr_threshold = 0.0

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_7gpuw")

[node name="Label" type="Label" parent="."]
offset_top = 312.0
offset_right = 1920.0
offset_bottom = 438.0
size_flags_horizontal = 4
text = "Galactic Roadside Assistance"
label_settings = ExtResource("1_n03fa")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_top = 438.0
offset_right = 1920.0
offset_bottom = 503.0
text = "We are the light in the vast darkness of space"
label_settings = ExtResource("2_vo058")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_top = 993.0
offset_right = 1920.0
offset_bottom = 1034.0
text = "A game created by SpaceyLake and Golahirom for the LudumDare 53 game jam in April 2023 on the theme \"Delivery\""
label_settings = ExtResource("2_vo058")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1920.0
offset_bottom = 370.0
alignment = 1
metadata/_edit_lock_ = true

[node name="G" type="Label" parent="HBoxContainer"]
modulate = Color(0.247059, 0.780392, 0.470588, 1)
layout_mode = 2
size_flags_horizontal = 4
text = "G."
label_settings = ExtResource("2_v2qlc")

[node name="R" type="Label" parent="HBoxContainer"]
modulate = Color(0.882353, 0.32549, 0.290196, 1)
layout_mode = 2
size_flags_horizontal = 0
text = "R."
label_settings = ExtResource("2_v2qlc")

[node name="A" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0.490196, 0.780392, 1)
layout_mode = 2
size_flags_horizontal = 8
text = "A."
label_settings = ExtResource("2_v2qlc")

[node name="ButtonPlayGame" type="Button" parent="."]
offset_left = 630.0
offset_top = 503.0
offset_right = 1290.0
offset_bottom = 629.0
theme = ExtResource("4_fcxkb")

[node name="Label" type="Label" parent="ButtonPlayGame"]
layout_mode = 0
offset_right = 660.0
offset_bottom = 126.0
text = "Play Game"
label_settings = ExtResource("1_n03fa")
horizontal_alignment = 1

[node name="ButtonHowToPlay" type="Button" parent="."]
offset_left = 630.0
offset_top = 629.0
offset_right = 1290.0
offset_bottom = 755.0
theme = ExtResource("4_fcxkb")

[node name="Label" type="Label" parent="ButtonHowToPlay"]
layout_mode = 0
offset_right = 660.0
offset_bottom = 126.0
text = "How To Play"
label_settings = ExtResource("1_n03fa")
horizontal_alignment = 1

[node name="ButtonQuit" type="Button" parent="."]
offset_left = 630.0
offset_top = 755.0
offset_right = 1290.0
offset_bottom = 881.0
theme = ExtResource("4_fcxkb")

[node name="Label" type="Label" parent="ButtonQuit"]
layout_mode = 0
offset_right = 660.0
offset_bottom = 126.0
text = "Quit"
label_settings = ExtResource("1_n03fa")
horizontal_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4io26")
